--- a/Vue-Licenta/package.json
+++ b/Vue-Licenta/package.json
@@ -33,6 +33,7 @@
     "vue-split-panel": "^1.0.4",
     "vue2-google-maps": "^0.10.3",
     "vuex": "^3.0.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -72,7 +73,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^3.1.11",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
