--- a/Ubber-Licenta/src/main/resources/application.properties
+++ b/Ubber-Licenta/src/main/resources/application.properties
@@ -6,14 +6,29 @@ keycloak.ssl-required=external
 keycloak.confidential-port=0
 keycloak.principal-attribute=preferred_username
 
+server.address=0.0.0.0
 server.port=8082
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=password
+# The alias mapped to the certificate
+server.ssl.key-alias=tomcat
+
+
+#trust store location
+trust.store=classpath:keystore.p12
+#trust store password
+trust.store.password=password
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/DriverUber
 
 spring.datasource.username=postgres
 spring.datasource.password=1q2w3e
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
